# query-component

./: Cargo.toml
schemas/: my-component.apex
src/components/: __batch__.rs
