[package]
name = "query"
version = "0.0.0"
description = "0.0.0"
authors = [""]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["host", "guest"]
host = []
guest = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
wasmflow-sdk = { version = "0.10.0-beta.4", features = ["v1"] }
markup-converter = "0.2"
jaq-core = "0.8.0"
anyhow = { version = "1.0", default-features = false }
clap = { version = "3.0", features = ["derive", "env"] }
thiserror = "1.0"
logger = { path = "/Users/shazaibn/wasmflow/crates/wasmflow/logger" }
atty = "0.2"

[dev-dependencies]
